--- a/projet.css
+++ b/projet.css
@@ -11,6 +11,10 @@ a {
 	color : inherit;
 }
 
+input, select {margin-bottom: 10px;}
+
+.well {width: 672px;}
+
 @media screen and (min-width: 1px) and (max-width: 700px) {
 
 	.navbar-brand { 
