Changement de la police titre et texte.

--- a/projet.css
+++ b/projet.css
@@ -1,3 +1,7 @@
+h1 {font-family: 'Special Elite', cursive;}
+
+p {font-family: 'Nanum Gothic', sans-serif; font-weight: bold;}
+
 .footer {
 	margin-top: 20px;
 	background-color: rgba(255,255,212,1);
@@ -7,9 +11,8 @@ p.textfooter {
 	font-size: 14px;
 	color : rgba(96,41,46,1);
 }
-a {
-	color : inherit;
-}
+
+figure { margin-bottom: 40px; }
 
 input, select {margin-bottom: 10px;}
 
