amélioration du footer dans css

--- a/main.css
+++ b/main.css
@@ -3,12 +3,22 @@ police à intégrer dans le html
 <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Special+Elite" rel="stylesheet">
  */
 
-
+ html, body {
+ margin:0; padding:0; width:100%; height:100%;
+ }
 
 /* couleur du background du body */
-.container
+
+.beige
 {
   background-color: #fefed5;
+  margin-top: -20px;
+  padding-top: 30px;
+}
+
+.beige p
+{
+  padding: 30px;
 }
 
 
@@ -24,12 +34,18 @@ p
   font-family: 'Nanum Gothic', sans-serif;
   color: #37080e;
   text-align: justify;
+  font-size: 16px;
 }
 
 a
 {
   text-decoration: none;
   color: #fefed3;
+  font-size: 16px;
+}
+
+a:hover{
+  color: white;
 }
 
 li
@@ -42,22 +58,35 @@ li
 {
   background-color: #6c2b29;
   color: #fefed3;
+
 }
 
 
 .footer
 {
-	margin-top: 20px;
-  background-color: #6c2b29;
-  color: #fefed3;
-  font-family: 'Nanum Gothic', sans-serif;
+
+
+
+  ;
 }
 
 .marron
 {
   background-color: #6c2b29;
-}
+  background-color: #6c2b29;
+  color: #fefed3;
+  font-family: 'Nanum Gothic', sans-serif;
+  border: solid white 1px;
+  margin-top: 420px;
+  width: 100%;
+  padding: 10px;
 
+
+}
+span
+{
+  color: #fefed3;
+}
 p.textfooter
 {
 	text-align: center;
@@ -67,9 +96,14 @@ p.textfooter
 
 }
 
-a.navbar
+.navbar-default .navbar-nav > li > a
 {
   color: #fefed3;
+}
+
+.navbar-default .navbar-nav > li > a:hover
+{
+  color:white;
 }
 
 .dropdown-menu li
@@ -100,6 +134,7 @@ a.navbar
 	margin-top: 9px;
 	margin-right: 0px;
 }
+
 
 /* couleur bouton */
 .button
