--- a/projet.css
+++ b/projet.css
@@ -12,13 +12,19 @@ p.textfooter {
 	color : rgba(96,41,46,1);
 }
 
-figure { margin-bottom: 40px; }
+figure { margin-bottom: 80px; }
 
 input, select {margin-bottom: 10px;}
 
 .well {width: 672px;}
 
 @media screen and (min-width: 1px) and (max-width: 700px) {
+
+
+	img { width: 300px; }
+
+
+	.well {width: 300px;}
 
 	.navbar-brand { 
 	font-size: 40px;
