--- a/main.css
+++ b/main.css
@@ -107,9 +107,9 @@ p.textfooter
 }
 
 
-/* Ajustement taille classe Well */
+/* Ajustement taille classe Well, mise en page formulaire et page event à venir */
 
-.well {width: 672px;}
+.well {width: 672px; background: #fefed3; border :1px solid #6c2b29; border-radius: 0px 0px 10px 10px;}
 
 figure { margin-bottom: 80px; }
 
