--- a/main.css
+++ b/main.css
@@ -4,15 +4,23 @@ police à intégrer dans le html
  */
 
  html, body {
- margin:0; padding:0; width:100%; height:100%;
- }
-
+  margin:0; padding:0; width:100%; height:100%;
+}
+.bg{
+  background-image: url("Images/Fond2.png");
+  width: 100%;
+  background-size : 100% auto;
+  background-repeat: repeat-y;
+  padding:0px;
+  margin-top:-20px;
+  border: 0px;
+  }
 /* couleur du background du body */
 
 .beige
 {
   background-color: #fefed5;
-  margin-top: -20px;
+  margin-top: 0px;
   padding-top: 30px;
 }
 
@@ -117,17 +125,6 @@ p.textfooter
   color: #6c2b29;
 }
 
-@media screen and (min-width: 1px) and (max-width: 700px)
-{
-
-	.navbar-brand {
-	font-size: 40px;
-	margin-top: 9px;
-	margin-right: 0px;
-}
-
-
-/* couleur bouton */
 .button
 {
   background-color: #6c2b29;
@@ -137,8 +134,19 @@ p.textfooter
 
 .fgauche
 {
-  background-color: #6c2b29;
+  background: url("Images/Fond.png");
   background-origin: padding-box;
-  padding: 8.33333333% !important;
+  background-size: cover;
+
   display : block;
+
+}
+/*!ne rien mettre en dessous*/
+@media screen and (min-width: 1px) and (max-width: 700px)
+{
+
+	.navbar-brand {
+	font-size: 40px;
+	margin-top: 9px;
+	margin-right: 0px;
 }
