ajustement de la mise en page (.espacement dans css) et ajout de l'image sherlock-holmes-resize pour l'event à venir

--- a/main.css
+++ b/main.css
@@ -126,7 +126,11 @@ p.textfooter
 
 figure { margin-bottom: 80px; }
 
+.espacement { margin-bottom: 70px; }
+
 input, select {margin-bottom: 10px;}
+
+
 
 
 
