--- a/main.css
+++ b/main.css
@@ -29,6 +29,8 @@ h1
 {
   font-family: 'Special Elite', cursive;
   color: #ce631b;
+  text-align: center;
+  margin-bottom: 70px;
 }
 
 p
@@ -125,8 +127,6 @@ p.textfooter
 .well {width: 672px; background: #fefed3; border :1px solid #6c2b29; border-radius: 0px 0px 10px 10px;}
 
 figure { margin-bottom: 80px; }
-
-.espacement { margin-bottom: 70px; }
 
 input, select {margin-bottom: 10px;}
 
