--- a/main.css
+++ b/main.css
@@ -209,13 +209,17 @@ input, select {margin-bottom: 10px;}
 
 /* Ajustement des éléments en XS */
 
-@media screen and (min-width: 1px) and (max-width: 700px)
+@media screen and (min-width: 1px) and (max-width: 767px)
 {
 
   /* Resize des elements */
 
 
-  img { width: 300px; }
+  img {
+      width: 300px;
+      align-items: center;
+      margin-bottom: 15px
+  }
 
   .well {width: 300px;}
 
