--- a/main.css
+++ b/main.css
@@ -151,7 +151,7 @@ p.textfooter
 
 .well {width: 672px; background: #fefed3; border :1px solid #6c2b29; border-radius: 0px 0px 10px 10px;}
 
-figure { margin-bottom: 80px;}
+figcaption { margin-bottom: 80px;}
 input, select {margin-bottom: 10px;}
 
 
@@ -207,6 +207,16 @@ input, select {margin-bottom: 10px;}
   background-image: none;
 }
 
+img{
+margin-bottom: 15px;
+}
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    color: #fefed3;
+background-color: #9c2b29;
+}
 /* Ajustement des éléments en XS */
 
 @media screen and (min-width: 1px) and (max-width: 767px)
@@ -218,7 +228,6 @@ input, select {margin-bottom: 10px;}
   img {
       width: 300px;
       align-items: center;
-      margin-bottom: 15px
   }
 
   .well {width: 300px;}
@@ -252,6 +261,7 @@ input, select {margin-bottom: 10px;}
       background-color: #6c2b29;
       color:#fefed3;
     }
+    .navbar-form{margin-right: 0px;}
 
 }
 /*!ne rien mettre en dessous*/
