--- a/main.css
+++ b/main.css
@@ -44,9 +44,11 @@ h2
 {
   font-family: 'Nanum Gothic', sans-serif;
   color: #ce631b;
-  text-align: center;
+  text-align: justify;
   font-size: 20px;
   font-weight: bold;
+  margin-top:40px;
+  margin-bottom: 15px;
 }
 p
 {
